--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -3,5 +3,6 @@ run-name: ${{ github.actor }} is learning GitHub Actions
 on: [push]
 jobs:
   testBash:
+    runs-on: ubuntu-latest
     steps:
       - run: echo "Hello TestBash!"
