--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -6,3 +6,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "Hello TestBash!"
+jobs:
+  runUnitTest:
+    runs-on: ubuntu-latest
+    steps:
+      - run: cd src/webapp/api
+      - run: npm install
+      - run: npm run test
