--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -9,7 +9,7 @@ jobs:
   runUnitTest:
     runs-on: ubuntu-latest
     steps:
-      - run: cd ...
+      - run: ls -al
       - run: cd src/webapp/api
       - run: npm install
       - run: npm run test
