--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -9,7 +9,10 @@ jobs:
   runUnitTest:
     runs-on: ubuntu-latest
     steps:
-      - run: ls -al
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '18'
       - run: cd src/webapp/api
       - run: npm install
       - run: npm run test
