--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -14,5 +14,6 @@ jobs:
         with:
           node-version: '18'
       - run: cd src/webapp/api
+      - run: ls -al
       - run: npm install
       - run: npm run test
